slides separators, charset, other

--- a/slides/lecture01/lecture01.html
+++ b/slides/lecture01/lecture01.html
@@ -17,11 +17,10 @@
         <div class="reveal">
             <div class="slides">
                 <section data-markdown="lecture01.md"
-                         data-separator="---"
-                         data-separator-vertical="^\n\n"
+                         data-separator="^---"
+                         data-separator-vertical="^\^\^\^"
                          data-separator-notes="^Note:"
-                         data-charset="iso-8859-15">
-                </section>
+                />
             </div>
         </div>
 
