Fix href to lecture01

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 	<body>
-		<a href="slides/lecture01/lecture01.html">Lecture 01</a>
+		<a href="lecture01/slides/lecture01.html#">Lecture 01</a>
 	</body>
 </html>
 
