--- a/lecture01/slides/lecture01.html
+++ b/lecture01/slides/lecture01.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <title>reveal.js</title>
+        <title>Java. Lecture 1</title>
 
         <link rel="stylesheet" href="../../reveal.js/dist/reset.css">
         <link rel="stylesheet" href="../../reveal.js/dist/reveal.css">
