--- a/lecture01/slides/lecture01.html
+++ b/lecture01/slides/lecture01.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../../reveal.js/dist/reset.css">
         <link rel="stylesheet" href="../../reveal.js/dist/reveal.css">
         <link rel="stylesheet" href="../../reveal.js/dist/theme/black.css" id="theme">
+        <link rel="stylesheet" href="../../reveal.js/plugin/title-footer/title-footer.css">
 
         <!-- Theme used for syntax highlighted code -->
         <link rel="stylesheet" href="../../reveal.js/plugin/highlight/monokai.css" id="highlight-theme">
@@ -25,21 +26,29 @@
         </div>
 
         <script src="../../reveal.js/dist/reveal.js"></script>
-        <script src="../../reveal.js/plugin/notes/notes.js"></script>
-        <script src="../../reveal.js/plugin/markdown/markdown.js"></script>
-        <script src="../../reveal.js/plugin/highlight/highlight.js"></script>
-        <script>
+        <script src="../../reveal.js/plugin/title-footer/title-footer.js"></script>
+        <script type="module">
             // More info about initialization & config:
             // - https://revealjs.com/initialization/
             // - https://revealjs.com/config/
+            import Markdown from '../../reveal.js/plugin/markdown/markdown.esm.js';
+            import Highlight from '../../reveal.js/plugin/highlight/highlight.esm.js';
+            import Notes from '../../reveal.js/plugin/notes/notes.esm.js';
+
             Reveal.initialize({
                 hash: true,
-
-                // Learn about plugins: https://revealjs.com/plugins/
+                slideNumber: 'c/t',
                 plugins: [
-                    RevealMarkdown,
-                    RevealHighlight,
-                    RevealNotes
+                    Markdown,
+                    Highlight,
+                    Notes,
+                ],
+                dependencies: [
+                    {
+                        src: 'plugin/title-footer/title-footer.js',
+                        async: true,
+                        callback: function() { title_footer.initialize(); }
+                    }
                 ]
             });
         </script>
