--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <!doctype html>
 <html>
 	<body>
-		<a href="lecture01/slides/lecture01.html#">Lecture 01</a>
+		<a href="lecture01/slides/lecture01.html#">Lecture 01. Intro</a>
+		<br>
+		<a href="lecture01/slides/lecture01.html#">Lecture 02. Classes and objects</a>
 	</body>
 </html>
 
